// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the Login component Error occurs, should show a div-tag with CSS class 'error' and error Message 1`] = `
<div class="error">Error</div>
<form>
  <h1>Login</h1><input type="email" required="" placeholder="email"><input type="password" required="" placeholder="password"><button type="submit">Submit</button>
</form>
`;

exports[`Testing the Login component Login contains a form with h1, 2x input fields, button 1`] = `
<!--v-if-->
<form>
  <h1>Login</h1><input type="email" required="" placeholder="email"><input type="password" required="" placeholder="password"><button type="submit">Submit</button>
</form>
`;
